--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  color: orangered;
+  color: grey;
   background-color: white;
   border-color: none;
 }
@@ -9,6 +9,7 @@
   color: gray;
 }
 
-.nav-tabs {
-  background-color: blue;
+#yellow {
+  height: 100%;
+  background: yellow;
 }
