adds: dark mode! email icon/button with alert! and other formatting

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.nav-tabs .nav-item.show .nav-link,
+/* .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   color: grey;
   background-color: white;
@@ -13,3 +13,14 @@
   height: 100%;
   background: yellow;
 }
+ */
+
+/* body.light-mode {
+  background-color: #fff;
+  color: #333;
+  transition: background-color 0.3s ease;
+}
+body.dark-mode {
+  background-color: #1a1919;
+  color: #999;
+} */
