--- a/src/components/style.css
+++ b/src/components/style.css
@@ -19,7 +19,7 @@ body.dark-mode .nav-link.active {
 body.light-mode .nav-link.active {
   background-color: white !important;
   border-bottom: none;
-  border-color: #e0fbfc !important;
+  border-color: lightgrey !important;
 }
 
 body.light-mode #tabs-tab-home {
@@ -92,4 +92,12 @@ body.dark-mode .navbar-brand {
 
 body.light-mode .fixed-bottom {
   background-color: #f8f9fa;
+}
+
+a,
+a:hover,
+a:visited,
+a:active {
+  color: inherit;
+  text-decoration: none;
 }
