changes: alert color to fit dark/light theme, tab styling

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,11 +1,3 @@
-a,
-a:hover,
-a:visited,
-a:active {
-  color: inherit;
-  text-decoration: none;
-}
-
 body.light-mode {
   background-color: white;
   color: #333;
@@ -15,6 +7,20 @@ body.light-mode {
 body.dark-mode {
   background-color: black;
   color: #dfdfdf;
+}
+
+body.dark-mode .tab {
+  background-color: yellow;
+  color: #dfdfdf;
+}
+
+body.dark-mode .nav-item .nav-link {
+  background-color: yellow;
+  color: yellow;
+}
+
+body.dark-mode .nav .nav-item .nav-fill {
+  color: yellow;
 }
 
 body.dark-mode .nav-link.active {
@@ -89,6 +95,12 @@ body.dark-mode .card-body {
   border-color: grey;
 }
 
+body.dark-mode .card-footer {
+  background-color: #343a40;
+  border-color: grey;
+  color: white !important;
+}
+
 body.dark-mode .fixed-bottom {
   background-color: #343a40;
   color: white;
@@ -104,4 +116,21 @@ body.light-mode .fixed-bottom {
 
 body.dark-mode .card-header {
   background-color: #343a40;
+}
+
+body.dark-mode .alert {
+  background-color: #343a40;
+  color: white;
+}
+
+body.light-mode .alert {
+  background-color: #f8f9fa;
+}
+
+a,
+a:hover,
+a:visited,
+a:active {
+  color: inherit !important;
+  text-decoration: none;
 }
